Added page numbers and people counters

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 
         </tbody>
       </table>
-      <div class="buttons">
+      <div class="buttons buttons-people">
         <button class="btn previous-btn-people btn-lg">Previous</button>
+        <span class="page-num-people" id="page-num-people">Page </span>
         <button class="btn next-btn-people btn-lg">Next</button>
       </div>
     </div>
@@ -56,8 +57,9 @@
 
         </tbody>
       </table>
-      <div class="buttons">
+      <div class="buttons buttons-starships">
         <button class="btn previous-btn-starhips btn-lg">Previous</button>
+        <span class="page-num-starships" id="page-num-starships">Page </span>
         <button class="btn next-btn-starhips btn-lg">Next</button>
       </div>
     </div>
